css almost complete however there is an issue with the playlists overlapping o larger screens

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 header {
     box-sizing: border-box;
     padding: 1vh 2vh;
-    width: 100vw;
+    width: 100%;
     height: 65px;
     line-height: 1em;
     position: fixed;
@@ -41,7 +41,7 @@ header h1 {
     width: 100%;
 }
 
-nav {           /*figured out nav problem; if vw>620px make margin a calc*/
+nav {          
     box-sizing: border-box;
     position: fixed;
     bottom: 1.5vh;
@@ -137,4 +137,11 @@ nav li img {
 .playlist .interact li {
     display: inline-block;
     padding: 3px 0 3px 10px;
+}
+
+
+@media screen and (min-width: 580px) { /* if the screen is too big for the original code to centre the nav, change the margin */
+    nav {
+        margin-left: calc((100% - 260px) / 2);
+    }
 }
